# python-electronic-network

./: .env.example  README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: data_base.json
sales_network/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
sales_network/migrations/: 0001_initial.py
users/: models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
